# githubwatch.hs

./: .gitignore  GithubWatch.hs  LICENSE  Result.hs  githubWatch.cabal
src/: Query.hs  User.hs
