name:                githubWatch
version:             0.1.0.1
synopsis:            Search github for recently updated repos for a given query. Also an example of REST using haskell.
-- description:         
license:             MIT
license-file:        LICENSE
author:              lesguillemets
maintainer:          kgkacko+github@gmail.com
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable githubWatch
  main-is:             GithubWatch.hs
  -- other-modules:       
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.6 && <4.9, aeson >=0.8 && <0.11, bytestring >=0.10 && <0.11, http-conduit >=2.1 && <2.2, transformers >=0.3 && <0.5.2
  -- hs-source-dirs:      
  default-language:    Haskell2010
